# Audio-Software-Engineering-MUSI-8903

./: .gitignore
Assignment1/: .gitignore  CMakeLists.txt  CombFilt.cpp
Assignment1/src/MUSI8903Exec/: CMakeLists.txt  (+3 more)
Assignment2/: .gitignore  Assignment2Vibrato.docx  CMakeLists.txt  Test_Vibrato.cpp
Assignment2/src/CombFilter/: CombFilter.cpp
Assignment2/src/MUSI8903Exec/: CMakeLists.txt  MUSI8903Exec.cpp
Assignment2/src/Tests/TestExec/: CMakeLists.txt  Test.cpp
Assignment2/src/Tests/Tests/: Test_CombFilter.cpp  Test_RingBuffer.cpp  Test_Vibrato.cpp
Assignment2/src/Vibrato/: Vibrato.cpp
Assignment2/src/inc/: CombFilter.h  CombFilterIf.h  LFO.h  RingBuffer.h  Synthesis.h  Vibrato.h  c_sinewave.h
Assignment3-fastconv/: Assignment-3.docx  CMakeLists.txt
AudioMixer-Project/: AudioMixer-Project.jucer
AudioMixer-Project/JuceLibraryCode/: AppConfig.h  JuceHeader.h
AudioMixer-Project/Source/: AudioMixInstance.h  Fft.h  Gain.cpp  Gain.h  Main.cpp  MainComponent.cpp  NormalizeFeatures.h
Classification/: CMakeLists.txt
GenerateModelInCPlusPlusClassification/TestClassification/: .gitignore  MyModelDoneHere  MyModelDoneHereRBF2  Mymodel  SpectralCentroid.cpp
MatlabClassification/: .gitignore  Classification.m  ConvertModelSVM.m  CrossValidation.m  CrossValidation.m~  FeatureSpectralCentroid.m  FeatureTimePeakEnvelope.m  FeatureTimeRms.m  GenerateGTlabels.m  GenerateGTlabels.m~  MainFeatrExtrnClsifictn.m  MainFeatrExtrnClsifictn.m~  Mymodel  NormalizeFeatures.m  Test.txt
PeakMeter/: AlphaRTVPPM.txt  AlphaSampChange.txt  Assignment5 VibratoPlug-in and PPM.docx  CMakeLists.txt  DCVPPM.txt  DelayedImpulse.txt
PeakMeterPlugin/: Assignment4VibratoPlug-in.docx  PeakMeterPlugin.jucer
PeakMeterPlugin/Source/: MeterComponent.cpp  MeterComponent.h  PeakMeter.cpp  PeakMeter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
TestClassification/TestClassification/: CurrentPredictionMatlab.txt  MyModelDoneHereRBF  MyModelDoneHereRBFwithNuSvr  Pan.cpp  TestLabelsMatlab.txt  TimeRMS.cpp  main.cpp
TestClassification/TestClassification.xcodeproj/: project.pbxproj
VibratoPlugin/: .gitignore  Assignment4VibratoPlug-in.docx  VibratoPlugin.jucer
VibratoPlugin/JuceLibraryCode/: AppConfig.h  JuceHeader.h
VibratoPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Vibrato.cpp
(+111 files in other folders)
